fix:Content at spacious give align center

--- a/src/assets/scss/components/Spacious.scss
+++ b/src/assets/scss/components/Spacious.scss
@@ -23,7 +23,7 @@ margin-bottom: -10px;
 .right-column{
 
     width: 50%;
-    margin-left: 0px;
+    margin-left: 230px;
     margin-top: 48px;
     
 }
@@ -37,5 +37,5 @@ margin-bottom: -10px;
   font-family: 'Montserrat';
   text-align: justify;
   line-height: 24px;
-  margin-bottom: 24px;
+  margin-bottom: 46px;
 }
